# metapool

./: .clangd  .gitignore  CMakeLists.txt  build.zsh  license  main.cpp  mtp_memory.hpp  mtp_setup.hpp  perft_setup.zsh  plot_alloc_profile.py  plot_trace.py  readme.md
benchmark/: CMakeLists.txt  benchmark.hpp  benchmark_complex.hpp  benchmark_intermediate.hpp  benchmark_main.cpp  benchmark_micro.hpp  benchmark_selective.hpp  benchmark_simple.hpp  build.sh  simple_benchmark.hpp
container/: chaselev.hpp  container_common.hpp  container_factory.hpp  crib.hpp  slag.hpp  vault.hpp
mtp/: alloc_tracer.hpp  allocator.hpp  allocator_config.hpp  fail.hpp  freelist.hpp  freelist_proxy.hpp  math.hpp  memory_model.hpp  metapool.hpp  metapool_config.hpp  metaset.hpp  monotonic_arena.hpp  mtpint.hpp
mtp/cntr/: cntr_factory.hpp  slag.hpp  vault.hpp
src/: alloc_header.hpp  alloc_logger.hpp  allocator.hpp  allocator.tpp  allocator_config.hpp  allocator_interface.hpp  container_factory.hpp  fail.hpp  freelist.hpp  freelist.tpp  math.hpp  mem.hpp  memory_api.hpp  memory_model.hpp  metapool.hpp  metapool.tpp  metapool_config.hpp  metapool_descriptor.hpp  metapool_interface.hpp  metapool_proxy.hpp  metapool_registry.hpp  monotonic_arena.cpp  monotonic_arena.hpp  mtp_align.hpp  mtp_memory.hpp  mtp_setup.hpp
